--- a/src/styles/characters.css
+++ b/src/styles/characters.css
@@ -1,3 +1,19 @@
+.favorites {
+  display: flex;
+  justify-content: center;
+}
+
+.favorites li {
+  list-style: none;
+}
+
+.favorites img {
+  max-width: 60px;
+  border-radius: 50%;
+  border: 2px solid gray;
+  margin: 4px;
+}
+
 .Characters {
   display: flex;
 	flex-wrap: wrap;
@@ -6,7 +22,7 @@
 
 .character-container {
   width: 290px;
-  height: 390px;
+  height: 420px;
   background-color: rgba(0,0,0,0.5);
   margin: 4px;
   border-radius: 8px;
